--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registro</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+   <app-root>Loading...</app-root>
    
 </body>
 </html>
