--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EstraMyPyme</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Asegúrate de que este archivo existe y está correctamente configurado -->
+    <link rel="stylesheet" href="styles.css">
     <style>
       body {
         margin: 0;
